changed title and ids for problems

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🧗 Vibe Castle Ladder</h1>
-            <p class="subtitle">Track your bouldering progress</p>
+            <h1>🧗 Castle Boulder Ladder</h1>
+            <p class="subtitle">Track your progress</p>
         </header>
 
         <main>
