Rearranged title and info button

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <div class="container">
         <header>
-            <h1>🧗 Castle Boulder Ladder</h1>
+            <div class="header-title">
+                <h1>🧗 Castle Boulder Ladder</h1>
+                <button id="infoButton" class="info-button" title="About & Privacy">ℹ️</button>
+            </div>
             <p class="subtitle">Track your progress month by month</p>
-            <button id="infoButton" class="info-button" title="About & Privacy">ℹ️</button>
         </header>
 
         <main>
