--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h1>🧗 Castle Boulder Ladder</h1>
                 <button id="infoButton" class="info-button" title="About & Privacy">ℹ️</button>
             </div>
-            <p class="subtitle">Track your progress month by month</p>
+            <p class="subtitle" id="subtitle">Track your progress month by month</p>
         </header>
 
         <main>
